--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="https://avvinue.app.link/testlink">https://avvinue.app.link/testlink</a>
+    <a href="https://avvinue.app.link/vK68iNGxlhb">https://avvinue.app.link/vK68iNGxlhb</a>
 </body>
 </html>
