--- a/index.html
+++ b/index.html
@@ -14,5 +14,7 @@
     <a href="https://avvinue.app.link/63dVLXf5mhb">https://avvinue.app.link/63dVLXf5mhb</a>
     <br>
     <a href="https://avvinue.app.link/owyn3EVcuhb">https://avvinue.app.link/owyn3EVcuhb</a>
+    <br>
+    <a href="https://avvinue.app.link/KuP0qeZYwhb">https://avvinue.app.link/KuP0qeZYwhb</a>
 </body>
 </html>
